--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.position{
+
+    left: 50%;  
+    transform: translate(-50%, -100%);
+    }
